// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilerList should render an initial component 1`] = `
<v-layout-stub tag="div" column="" class="my-1">
  <div class="title mb-2">Filer List</div>
  <div>
    <v-btn-stub tag="button" activeclass="" type="button">All</v-btn-stub>
    <v-btn-stub tag="button" activeclass="" type="button">Odd</v-btn-stub>
    <v-btn-stub tag="button" activeclass="" type="button">Even</v-btn-stub>
  </div> <span tag="ul" name="fade-group" class="filer-list"><li class="filer-item">1</li><li class="filer-item">2</li><li class="filer-item">3</li><li class="filer-item">4</li><li class="filer-item">5</li><li class="filer-item">6</li><li class="filer-item">7</li><li class="filer-item">8</li><li class="filer-item">9</li><li class="filer-item">10</li><li class="filer-item">11</li><li class="filer-item">12</li><li class="filer-item">13</li><li class="filer-item">14</li><li class="filer-item">15</li><li class="filer-item">16</li><li class="filer-item">17</li><li class="filer-item">18</li><li class="filer-item">19</li><li class="filer-item">20</li><li class="filer-item">21</li></span>
</v-layout-stub>
`;

exports[`FilerList should render component with even option 1`] = `
<v-layout-stub tag="div" column="" class="my-1">
  <div class="title mb-2">Filer List</div>
  <div>
    <v-btn-stub tag="button" activeclass="" type="button">All</v-btn-stub>
    <v-btn-stub tag="button" activeclass="" type="button">Odd</v-btn-stub>
    <v-btn-stub tag="button" activeclass="" type="button">Even</v-btn-stub>
  </div> <span tag="ul" name="fade-group" class="filer-list"><li class="filer-item">2</li><li class="filer-item">4</li><li class="filer-item">6</li><li class="filer-item">8</li><li class="filer-item">10</li><li class="filer-item">12</li><li class="filer-item">14</li><li class="filer-item">16</li><li class="filer-item">18</li><li class="filer-item">20</li></span>
</v-layout-stub>
`;

exports[`FilerList should render component with odd option 1`] = `
<v-layout-stub tag="div" column="" class="my-1">
  <div class="title mb-2">Filer List</div>
  <div>
    <v-btn-stub tag="button" activeclass="" type="button">All</v-btn-stub>
    <v-btn-stub tag="button" activeclass="" type="button">Odd</v-btn-stub>
    <v-btn-stub tag="button" activeclass="" type="button">Even</v-btn-stub>
  </div> <span tag="ul" name="fade-group" class="filer-list"><li class="filer-item">1</li><li class="filer-item">3</li><li class="filer-item">5</li><li class="filer-item">7</li><li class="filer-item">9</li><li class="filer-item">11</li><li class="filer-item">13</li><li class="filer-item">15</li><li class="filer-item">17</li><li class="filer-item">19</li><li class="filer-item">21</li></span>
</v-layout-stub>
`;
